# semantic-search-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SETUP.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/sample_docs/: architecture_notes.txt  payments_api.md
examples/: quickstart.py
src/rag_pipeline/: __init__.py  analytics.py  auth.py  chunking.py  cli.py  config.py  embeddings.py  fusion.py  generator.py  ingest.py  pg_store.py  pipeline.py  prompts.py  reranker.py  retriever.py  store_factory.py  types.py  vector_store.py
tests/: test_pipeline.py
