[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-search-rag"
version = "0.1.0"
description = "Semantic-search RAG pipeline: vector embeddings + advanced prompt engineering over unstructured data, grounded on Claude."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Srilaya Ponangi" }]
keywords = ["rag", "semantic-search", "embeddings", "claude", "anthropic", "vector-search", "llm"]

dependencies = [
    "anthropic>=0.49",   # Claude generation (Messages API)
    "voyageai>=0.3",     # Embeddings (Anthropic-recommended provider)
    "numpy>=1.24",       # Vector math for the local store
    "pypdf>=4.0",        # PDF ingestion
    "python-dotenv>=1.0" # Load API keys from .env
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
rag-ingest = "rag_pipeline.cli:ingest_main"
rag-query = "rag_pipeline.cli:query_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
