[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-search-rag"
version = "0.1.0"
description = "Semantic-search RAG pipeline: vector embeddings + advanced prompt engineering over unstructured data, using OpenAI (with a Claude backend)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Srilaya Ponangi" }]
keywords = ["rag", "semantic-search", "embeddings", "openai", "claude", "vector-search", "llm"]

dependencies = [
    "openai>=1.40",      # Embeddings (text-embedding-3-*) + generation (Chat Completions)
    "numpy>=1.24",       # Vector math for the local store
    "pypdf>=4.0",        # PDF ingestion
    "openpyxl>=3.1",     # Excel (.xlsx) ingestion
    "requests>=2.31",    # URL ingestion
    "beautifulsoup4>=4.12", # URL ingestion (HTML -> text)
    "python-dotenv>=1.0",# Load API keys from .env
    "streamlit>=1.36",   # Web UI (app.py)
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]   # Supabase / pgvector (RAG_STORE_BACKEND=pgvector)
auth = ["supabase>=2.0"]              # Supabase Auth (email/password login)
anthropic = ["anthropic>=0.49"]       # RAG_GENERATION_PROVIDER=anthropic
voyage = ["voyageai>=0.3"]            # RAG_EMBEDDING_PROVIDER=voyage
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
rag-ingest = "rag_pipeline.cli:ingest_main"
rag-query = "rag_pipeline.cli:query_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
